# crab-os

./: Cargo.toml  setup.bat  setup_dev_env.bat  start-qemu.bat  x86_64-os_hobby.json
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
