[package]
name = "os_hobby"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "os_hobby"
test = false
bench = false

[dependencies]
bootloader = "0.9.8"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
